About: Alignment and padding fixes for tablet screens.

--- a/src/css/creative.css
+++ b/src/css/creative.css
@@ -255,14 +255,6 @@ header.about {
 	background-size: cover;
 }
 
-@media (max-width: 768px) {
-	header.about {
-		background-image: url("../images/about/header-mobile.jpg");
-		background-position: center top;		
-		margin-top: 6rem;
-	}
-}
-
 header.about h1 {
 	font-size: 4rem;
 	line-height: 4rem;
@@ -279,21 +271,9 @@ header.about p > strong {
 	font-weight: 600;
 }
 
-@media (max-width: 992px) {
-	header.about h1 {
-		font-size: 3rem;
-		line-height: 3rem;		
-	}	
-}
-@media (max-width: 768px) {
-	header.about {
-		padding-top: 16rem;
-		padding-bottom: 0px;
-	}	
-	header.about div.container {
-		background-color: rgba(0, 0, 0, 0.7);
-		color: #FFF;
-		max-width: 100%;
+@media (min-width: 1281px) {
+	header.about p {
+		font-size: 1.2rem;
 	}
 }
 
@@ -305,9 +285,25 @@ header.about p > strong {
 		padding-bottom: 0;
 	}
 }
-@media (min-width: 1281px) {
-	header.about p {
-		font-size: 1.2rem;
+
+@media (max-width: 992px) {
+	header.about h1 {
+		font-size: 3rem;
+		line-height: 3rem;		
+	}	
+}
+@media (max-width: 768px) {
+	header.about {
+		background-image: url("../images/about/header-mobile.jpg");
+		background-position: center top;		
+		margin-top: 6rem;
+		padding-top: 16rem;
+		padding-bottom: 0px;
+	}	
+	header.about div.container {
+		background-color: rgba(0, 0, 0, 0.7);
+		color: #FFF;
+		max-width: 100%;
 	}
 }
 
@@ -394,8 +390,20 @@ header.masthead p {
 	font-size: 1.1rem;
 }
 
-.about-box .content {
+.about-box .about-content {
 	padding: 0 2rem;
+}
+
+.about-box .about-developer {
+	max-width: 52%;
+	margin: 0 auto;
+}
+
+@media (max-width: 992px) {
+	.about-box .about-developer {
+		max-width: 100%;
+		margin: 0;
+	}
 }
 
 .about-box .carousel-item img {
